--- a/src/sass/components/_englishPuzzle-buttons.scss
+++ b/src/sass/components/_englishPuzzle-buttons.scss
@@ -21,21 +21,31 @@
 .tips__button {
   width: 40px;
   height: 40px;
-
+  margin-left: 10px;
+  border-radius: 5px;
+  cursor: pointer;
   background-size: cover;
+  background-color: #00cdac;
+  &:first-child {
+    margin-left: 0;
+  }
+
+  &:hover {
+    box-shadow: 0 0 3px 3px #70fdc9;
+    transition: .3s ease-in-out;
+  }
 
   &_active {
-    background-color: #8ddad5;
-    border: 2px solid white;
+    box-shadow: 0 0 3px 3px #ffffff;
   }
   &_translate {
-    background-image: url(/src/assets/images/ep-icons/ep-tip.png);
+    background-image: url(/src/assets/images/ep-icons/ep-tip.svg);
   }
   &_speech {
-    background-image: url(/src/assets/images/ep-icons/ep-melody.png);
+    background-image: url(/src/assets/images/ep-icons/ep-melody.svg);
   }
   &_background {
-    background-image: url(/src/assets/images/ep-icons/ep-gallery.png);
+    background-image: url(/src/assets/images/ep-icons/ep-gallery.svg);
   }
 }
 
@@ -48,7 +58,50 @@
   }
 }
 
+.ep-close_app {
+  position: relative;
+  top: 0;
+  right: 0;
+  margin-left: 20px;
+
+  width: 32px;
+  height: 32px;
+
+  opacity: .3;
+  &:before,
+  &:after {
+    content: " ";
+    position: absolute;
+    left: 15px;
+
+    width: 2px;
+    height: 33px;
+
+    background-color: white;
+  }
+  &:before {
+    transform: rotate(45deg);
+  }
+  &:after {
+    transform: rotate(-45deg);
+  }
+  &:hover {
+    opacity: 1;
+
+    transition: .3s ease-in-out;
+  }
+}
+
 @keyframes speech-anim {
    from { transform: scale(1.2) }
    to { transform: scale(0.8) }
+}
+
+@media screen and (max-width: 555px) {
+  .ep-close_app {
+    margin-left: 10px;
+  }
+  .tips__button {
+    margin-left: 30px;
+  }
 }
