--- a/src/sass/layouts/word-search-game/_start-button.scss
+++ b/src/sass/layouts/word-search-game/_start-button.scss
@@ -1,13 +1,17 @@
 .app__button_word-search {
-  background: $main-color;
+  background: $dark-main-color;
 
   &:hover {
     color: $main-color;
 
-    border: 1px solid $main-color;
+    border: 1px solid $dark-main-color;
   }
 }
 
-.app__button_close_word-search {
-  background: $main-color;
+.word-search_cancel {
+  color: $dark-main-color;
+}
+
+.word-search_close {
+  background: $dark-main-color;
 }
