--- a/src/sass/layouts/savannah-game/_gameStatModal.scss
+++ b/src/sass/layouts/savannah-game/_gameStatModal.scss
@@ -5,9 +5,9 @@
   width: 100%;
   max-width: 784px;
   min-height: 70vh;
-  max-height: 100vh;
+  max-height: 600px;
   margin: 0 auto;
-  margin-top: -35px;
+  margin-top: -66px;
   padding: 15px 16px;
   overflow: auto;
 
@@ -20,6 +20,10 @@
 @include media-tablet {
     margin: 0;
     margin-top: -50px;
+  }
+
+@include media-mobile {
+    margin-top: -86px;
   }
 }
 
@@ -42,7 +46,8 @@
     align-items: center;
     width: 100%;
     max-width: 542px;
-    height: 337px;
+    min-height: 315px;
+    max-height: 500px;
     margin: 0 auto;
     margin-top: 20px;
     overflow: auto;
@@ -50,6 +55,7 @@
 @include media-mobile {
       height: 270px;
     }
+
     &_wrong {
       width: 100%;
 
@@ -85,6 +91,7 @@
 
 @include media-mobile {
       width: 170;
+      margin-top: 0;
 
       font-size: 12px;
     }
@@ -123,7 +130,9 @@
   flex-direction: row;
   align-items: center;
   width: 100%;
-  margin-top: 16px;
+
+// margin-top: 16px;
+
   @include media-mobile {
     margin-top: 0;
   }
