--- a/src/sass/layouts/_englishPuzzle-layout.scss
+++ b/src/sass/layouts/_englishPuzzle-layout.scss
@@ -10,38 +10,39 @@
 
 .container-outer {
   display: flex;
-  // min-height: 611px;
 }
 
 .container-inner {
-  overflow-x: scroll;
-  border-radius: 5px;
   width: 100%;
+  overflow-x: scroll;
+
+  border-radius: 5px;
   &::-webkit-scrollbar {
     width: 1em;
   }
   &::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
   }
   &::-webkit-scrollbar-thumb {
     background-color: darkgrey;
-    outline: 1px solid slategrey;
     border-radius: 5px;
+    outline: 1px solid slategrey;
   }
 }
 
 .ep-background {
-  background: linear-gradient(rgba(8,15,26,.2) 0%, rgba(17,17,46,.5) 100%) center center/cover fixed,url(/src/assets/images/ep-images/ep-background.jpg) center center no-repeat fixed;
-  background-size: cover;
   min-width: 100vw;
   height: calc(100vh - 93px);
+
+  background: linear-gradient(rgba(8,15,26,.2) 0%, rgba(17,17,46,.5) 100%) center center/cover fixed,url(/src/assets/images/ep-images/ep-background.jpg) center center no-repeat fixed;
+  background-size: cover;
 }
 
 .ep-controls {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   margin-top: 20px;
-  flex-wrap: wrap;
   &__right-side,
   &__left-side {
     display: flex;
@@ -75,19 +76,25 @@
   border: 1px solid #ffffff;
   border-radius: 5px;
 
+  &-wrapper {
+    display: flex;
+    min-width: 750px;
+  }
+
   & > img {
-    object-fit: cover;
-    height: 100%;
     width: 100%;
+    height: 100%;
+
+    object-fit: cover;
   }
 
   &__line {
     display: flex;
     width: calc(100% + 22px);
+    min-width: 735px;
     height: 52px;
     margin-left: -20px;
     overflow: hidden;
-    min-width: 735px;
 
     border-bottom: 1px solid #ffffff;
     &_active {
@@ -113,16 +120,12 @@
       border-radius: 50%;
       &-active {
         padding-top: 1px;
-        box-shadow: 0 0 3px 3px #70fdc9;
+
         border: 2px solid #70fdc9;
+        box-shadow: 0 0 3px 3px #70fdc9;
       }
     }
   }
-}
-
-.ep-board-wrapper {
-  display: flex;
-  min-width: 750px;
 }
 
 .ep-numbers {
@@ -133,11 +136,10 @@
 
 .ep-wrapper {
   width: calc(100% - 35px);
+  min-width: 713px;
   margin-top: 20px;
-  // margin-left: 35px;
   margin-bottom: 10px;
   overflow: hidden;
-  min-width: 713px;
 
   border: 1px solid lightpink;
   border-radius: 5px;
@@ -182,9 +184,10 @@
 
   color: white;
   text-align-last: center;
-  cursor: pointer;
+
   background-color: #00cdac;
   border-radius: 5px;
+  cursor: pointer;
 
   &:focus {
     outline: none;
@@ -221,7 +224,8 @@
   .ep-controls {
     flex-direction: column-reverse;
     margin-top: 10px;
-    &__right-side, &__left-side {
+    &__right-side,
+    &__left-side {
       justify-content: center;
     }
     &__left-side {
@@ -231,6 +235,7 @@
   }
   .ep-tips__text-translate {
     margin: 10px 0;
+
     font-size: 1.6rem;
   }
   .ep-label {
