refactor: change main.scss

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -33,7 +33,7 @@
 // audiocall
 @import "audiocall";
 
-// english-puzzle
+// puzzle
 @import "layouts/englishPuzzle-layout";
 @import "components/englishPuzzle-buttons";
 @import "layouts/englishPuzzle-modal";
