--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -25,6 +25,7 @@
 @import "layouts/main";
 @import "layouts/footer";
 @import "layouts/modal-settings";
+@import "layouts/modal-short-stat";
 // pages
 
 // savannah-game
