feat: add history api event for close game, refactor: some changes in js and css

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -34,7 +34,4 @@
 @import "audiocall";
 
 // puzzle
-@import "layouts/englishPuzzle-layout";
-@import "components/englishPuzzle-buttons";
-@import "layouts/englishPuzzle-modal";
-@import "layouts/englishPuzzle-startLayout";
+@import "english-puzzle";
