--- a/src/sass/components/speak_it/speak_it-modals.scss
+++ b/src/sass/components/speak_it/speak_it-modals.scss
@@ -6,56 +6,154 @@
   bottom: 0;
   left: 0;
   z-index: 3;
-
   justify-content: center;
   align-items: flex-start;
   box-sizing: border-box;
   width: 100%;
   max-width: 100%;
   padding: 160px 0 0 0;
-
   background-color: rgba(0, 0, 0, .6);
   border-radius: 0;
 }
 
 .modal_window {
   z-index: 5;
-
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 398px;
   margin: auto;
   padding: 36px 0 22px;
-
   background-color: #ffffff;
   border-radius: 8px;
   box-shadow: 1px 0 2px 0 rgba(0, 0, 0, .16);
 }
 .modal_statistic {
-  position: fixed;
-  top: 60px;
-  right: 0;
-
-/* bottom: 0; */
-  left: 0;
-  z-index: 4;
-
-  width: 480px;
-  min-height: 400px;
-
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  box-sizing: border-box;
+  width: 100%;
+  max-width: 784px;
+  height: calc(100% - 100px);
+  max-height: 400px;
+  margin: 0 auto;
+  padding: 15px 16px;
+  overflow: auto;
   text-align: center;
-
-/* height: 65%; */
-
-  background-color: cornsilk;
+  background-color: #ffffff;
+  border: 1px solid #e6e9ee;
+  border-radius: 8px;                
+  display: flex;
+  z-index: 4;
+  position: fixed;
+  top: calc((100% - 400px) /2);
+  left: calc((100% - 784px) /2);
 }
-
-.modal_statistic > h2 {
-  margin: 5px 0;
+.statistics__title {
+  font-weight: 300;
+  font-size: 25px;
+  line-height: .85;
+  color: #37383c;
 }
-.modal_statistic > p {
-  margin: 2px 0;
+.statistics__words-set {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 542px;
+  max-height: 500px;
+  margin: 0 auto;
+  margin-top: 20px;
+  overflow: auto;
+}
+.statistics__words-set_wrong {
+  width: 100%;
+  font-size: 12px;
+  line-height: 1.33;
+  color: #ed593b;
+  text-transform: uppercase;
+}
+.wrong_title, .correct_title {
+  font-weight: 700;
+}
+.wordBox {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+}
+.soundBox {
+  position: relative;
+  display: inline-block;
+  margin-right: 10px;
+  line-height: 0;
+}
+.word-eng {
+  max-width: calc(50% - 54px);
+  margin-right: 6px;
+  overflow: hidden;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.25;
+  color: #2582e7;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  word-break: normal;
+  cursor: pointer;
+}
+.word-trans {
+  flex-grow: 1;
+  max-width: calc(50% - 54px);
+  overflow: hidden;
+  font-size: 16px;
+  line-height: 1.25;
+  text-align: start;
+  color: #37383c;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  word-break: normal;
+}
+.statistics__words-set_correct {
+  width: 100%;
+  font-size: 12px;
+  line-height: 1.33;
+  color: #28c38a;
+  text-transform: uppercase;
+}
+.word-audio {
+  width: 100%;
+  cursor: pointer;
+}
+.statistics__continue{
+  width: 200px;
+  margin: 0 auto;
+  margin-top: 10px;
+  padding: 10px 42px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.43;
+  text-align: center;
+  color: #fff;
+  background-color: #00c49d;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.statistics__continue:hover{
+  color: #00c49d;
+  background-color: #fff;
+}
+.statistics__back{
+  margin-top: 20px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.71;
+  text-align: center;
+  color: #00c49d;
+  text-decoration: underline;
+  cursor: pointer;
 }
 .modal_view {
   margin-top: 20px;
@@ -69,31 +167,27 @@
   margin-top: 20px;
   padding: 10px 2vw;
 }
-
-
-
-
-
 .app__button_view {
   width: 250px;
   margin-top: 48px;
   padding: 11px 0;
-
   font-weight: 600;
   font-size: 14px;
-
   border-radius: 4px;
 }
-
-
 @media only screen and (min-width: 320px) and (max-width: 700px) {
   .modal_window {
     width: 90vw;
     margin: auto;
     padding: 2vw;
   }
-
   .app__modal__box_title {
     text-align: center;
+  }
+}
+@media only screen and (min-width: 320px) and (max-width: 800px) {
+  .modal_statistic {
+    width: 94%;
+    left: 3%;
   }
 }
