fix style according with comments

--- a/src/sass/components/speak_it/speak_it-navigation-container.scss
+++ b/src/sass/components/speak_it/speak_it-navigation-container.scss
@@ -1,7 +1,4 @@
 @import "speak_it-constants";
-.close {
-  top: 5px;
-}
 .raiting_container {
   position: absolute;
   top: 90px;
@@ -12,7 +9,7 @@
 
 @extend %raiting_row;
 }
-.text {
+.text_raiting {
   top: 40px;
   right: 47px;
 
@@ -65,14 +62,20 @@
   transition: background-color .2s cubic-bezier(0, -1.85, .27, 1.75);
 }
 
-.close:before, .close:after{
-  background-color: #959795;
-}
-.close:hover::before, .close:hover::after{
-  background-color: #ffffff;
+// .close:before, .close:after{
+//   background-color: #ff0000;
+// }
+// .close:hover::before, .close:hover::after{
+//   background-color: #ffffff;
 
-}
+// }
 
+.speakIt_close{
+  opacity: 0.7;
+}
+.speakIt_close:hover{
+  opacity: 1;
+}
 @media only screen and (max-width: 1050px) {
   .raiting_container {
     position: inherit;
