--- a/src/sass/layouts/savannah-game/_savannah-preloader.scss
+++ b/src/sass/layouts/savannah-game/_savannah-preloader.scss
@@ -21,7 +21,7 @@ $color: $color-1, $color-2, $color-3, $color-4, $color-5;
   }
 }
 
-.preloader__conatiner {
+.preloader__container {
   height: 100%;
 
 @include media-tablet {
