--- a/src/sass/components/speak_it/speak_it-navigation-container.scss
+++ b/src/sass/components/speak_it/speak_it-navigation-container.scss
@@ -62,31 +62,23 @@
   transition: background-color .2s cubic-bezier(0, -1.85, .27, 1.75);
 }
 
-// .close:before, .close:after{
-//   background-color: #ff0000;
-// }
-// .close:hover::before, .close:hover::after{
-//   background-color: #ffffff;
-
-// }
-
 .speakIt_close{
   opacity: 0.7;
 }
 .speakIt_close:hover{
   opacity: 1;
 }
-@media only screen and (max-width: 1050px) {
+@media only screen and (max-width: 920px) {
   .raiting_container {
     position: inherit;
-
+    top: 0px;
     width: 230px;
     margin: auto;
     margin-top: 15px;
   }
 
   .raiting_row,
-  .text,
+  .text_raiting,
   .result {
     justify-content: center;
 
