feat: add notification modal

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -26,6 +26,8 @@
 @import "layouts/footer";
 @import "layouts/modal-settings";
 @import "layouts/modal-short-stat";
+@import "layouts/modal-notification";
+
 // pages
 
 // savannah-game
