--- a/src/sass/layouts/_modal-short-stat.scss
+++ b/src/sass/layouts/_modal-short-stat.scss
@@ -4,7 +4,7 @@ $short-stat-button-color: #19396e;
 .short-stat-container {
   display: flex;
   flex-direction: column;
-  width: 300px;
+  max-width: 300px;
   margin: 0 auto;
   padding: 1rem;
   overflow: hidden;
