feat: implement switch between word groups

--- a/src/sass/layouts/_dictionary-layout.scss
+++ b/src/sass/layouts/_dictionary-layout.scss
@@ -24,6 +24,9 @@
     box-shadow: 0 0 4px 1px #00cdac;
     background-color: #00cdac ;
   }
+  &_active {
+    box-shadow: 0 0 4px 1px #00cdac;
+  }
 }
 
 .wordsData {
